# starship-core

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README.md  env.py
alembic/versions/: 319bae16dc67_add_combat_active_id.py  4785c9a6075a_add_crew_action_comment_and_ship_.py  48b35a405931_add_crew_action_field.py  5e8d53d2f701_test.py  783a091df9a2_add_actionkind_quit.py  8261292e075d_remove_detail_copy_garage__groups_tables.py  9af95301cdeb_third_try_of_reimpl_combat_crew_.py  b0a996c54ee4_reimpl_combat_crew_relationships.py  d07cbbd11c26_remake_crew_action_field.py  deb477523e15_fourth_try_of_reimpl_combat_crew_.py  fba971eb713d_second_try_of_reimpl_combat_crew_.py
migrations/db_v1/: down.sql  up.sql
migrations/db_v2/: models.py
starship/: __init__.py  admin.py  api.py  combat.py  db.py  dbhelper.py  helper.py  helpers.py  models.py  wsgi.py
starship/admin/: __init__.py  auth.py  blueprint.py  crew.py  dashboard.py  detail.py  error_handlers.py  garage.py  helpers.py  ship.py  user.py
starship/admin/forms/: detail.py  ship.py  user.py
starship/admin/templates/: 403.html  (+18 more)
starship/api/: __init__.py  blueprint.py  combat.py  crew.py  detail.py  detail_copy.py  detail_type.py  error.py  garage.py  ship.py  store.py
starship/data/: __all_models.py  action.py  combat.py  combat_groups.py  crew.py  crew_groups.py  db.py  db_session.py  detail.py  detail_copy.py  detail_copy_groups.py  detail_type.py  garage.py  garage_groups.py  required_ship_detail.py  sentence.py  ship.py  user.py
(+10 files in other folders)
